--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -1,7 +1,12 @@
 .containerHome {
-  width: 100vw;
+  width: 100%;
   height: 100%;
   padding: 50px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 
   background-color: #222222;
 }
