--- a/src/components/CardGlobal/styles.css
+++ b/src/components/CardGlobal/styles.css
@@ -3,4 +3,17 @@
   height: 400px;
   padding: 20px;
   border-radius: 10px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.CardGlobal h1 {
+  font-size: 50px;
+}
+
+.CardGlobal h2 {
+  font-size: 140px;
 }
