--- a/src/components/CardGlobal/styles.css
+++ b/src/components/CardGlobal/styles.css
@@ -5,15 +5,26 @@
   border-radius: 10px;
 
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 
-.CardGlobal h1 {
+.CardGlobal .iconChanel {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-right: 20px;
+  margin-right: 20px;
+  border-right: 1px solid black;
+}
+
+.CardGlobal .contentCardGlobal h1 {
   font-size: 50px;
 }
 
-.CardGlobal h2 {
+.CardGlobal .contentCardGlobal h2 {
   font-size: 140px;
+}
+
+.CardGlobal .contentCardGlobal h3 {
+  margin-top: 10px;
+  font-size: 30px;
 }
