--- a/src/components/CardGlobal/styles.css
+++ b/src/components/CardGlobal/styles.css
@@ -1,6 +1,6 @@
 .CardGlobal {
   background-color: rgb(124, 124, 124);
-  height: 400px;
+  /* height: 400px; */
   padding: 20px;
   border-radius: 10px;
 
