--- a/src/components/cards.css
+++ b/src/components/cards.css
@@ -11,3 +11,19 @@
 .containerCard h2 {
   margin-top: 10px;
 }
+
+.containerCard .headerCard {
+  display: flex;
+  align-items: center;
+}
+
+.containerCard .headerCard .analistActive {
+  background-color: gray;
+  margin-left: 10px;
+  height: 20px;
+  width: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+}
