--- a/src/global.css
+++ b/src/global.css
@@ -11,3 +11,26 @@
   font-weight: 100;
   color: white;
 }
+
+:root {
+  --blue-soft: #5778bb;
+  --blue: #1c3e8d;
+  --wine: #8f181b;
+  --red: #d12032;
+  --yellow: #fbb925;
+  --yellow-soft: #f5c989;
+  --green-soft: rgb(89, 165, 98);
+  --green: #178245;
+  --white: #fff;
+  --black: rgb(0, 0, 0);
+  --background: #f0f0f5;
+  --block: #ce7e80;
+  --edit: #a8a8b3;
+  --dark-background: #222222;
+  --dark-button: #666666;
+}
+
+body {
+  background: var(--dark-background);
+  -webkit-font-smoothing: antialiased;
+}
