--- a/src/components/Analist/styles.css
+++ b/src/components/Analist/styles.css
@@ -5,8 +5,12 @@
 
   margin: 10px 0px;
   background-color: #303030;
-  padding: 15px 10px;
+  padding: 15px 0px;
   border-radius: 10px;
 
   width: 90%;
+}
+
+.containerAnalist .nameAnalist {
+  width: 10%;
 }
