--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -10,3 +10,11 @@
 
   background-color: #222222;
 }
+
+.containerHome .analistContent {
+  width: 100%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
