Implementado loading para carregamento do MSP

--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -18,3 +18,10 @@
   justify-content: center;
   align-items: center;
 }
+
+.loadingStyle {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
