--- a/src/components/CardGlobal/styles.css
+++ b/src/components/CardGlobal/styles.css
@@ -28,3 +28,11 @@
   margin-top: 10px;
   font-size: 30px;
 }
+
+.loadingStyle {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
